登录有限制,时间限制 shiro

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cy</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>CGB-DB-SYS-V3.03</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
